--- a/stanley/version_4.ipynb
+++ b/stanley/version_4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "id": "0ccd7229",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "76573b29",
+   "id": "f86c209e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2ff3e741",
+   "id": "64b38476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d365ff4f",
+   "id": "01074959",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ea625a2c",
+   "id": "0d18ce5d",
    "metadata": {},
    "outputs": [
     {
@@ -12782,8 +12782,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "39b04f85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_file = open('images_new.txt', 'wb')\n",
+    "pickle.dump(images, image_file)\n",
+    "image_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "77496c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Catalog Number', 'Ghost Sku/Product Code', 'Status\\n',\n",
+       "       '*Date of Status Change', 'Replacement SKU ', 'Brand', 'SBU ',\n",
+       "       'Division ', 'Description', 'Industry List', '45% Off (Irwin Only)',\n",
+       "       'Gold / P1', 'Platinum / P2', ' Surcharge ',\n",
+       "       ' 45% Off + Surcharge (IRWIN Only) ', ' Gold + Surcharge ',\n",
+       "       'Platinum +  Surcharge', 'Category', 'Sub Category',\n",
+       "       'Application Tool\\n(for Fastening Products)', 'MOQ (Buy Multiples)\\n',\n",
+       "       'Pack Qty\\n(for Fasteners)', 'MTO?            (Yes Or No)',\n",
+       "       'Country of Orgin ', 'Commodity Code', 'Each\\nUPC Code',\n",
+       "       'Each\\nLength (IN)', 'Each\\nWidth (IN)', 'Each \\nHeight (IN)',\n",
+       "       'Each\\nGross Weight (LB)', 'Each \\nVolume (CUB)',\n",
+       "       'Master Pack\\nUPC Code', 'Master Pack \\nQty', 'Master Pack Length (IN)',\n",
+       "       'Master Pack Width (IN)', 'Master Pack Height (IN)',\n",
+       "       'Master Pack \\nGross Weight (LB)', 'Master Pack Volume (CUB)',\n",
+       "       'Case \\nUPC Code', 'Case \\nQty', 'Case \\nLength (IN)',\n",
+       "       'Case \\nWidth (IN)', 'Case \\nHeight (IN)', 'Case \\nGross Weight (LB)',\n",
+       "       'Case \\nVolume (CUB)', 'Pallet \\nUPC Code', 'Pallet \\nQty ',\n",
+       "       'Pallet\\n Length (IN)', 'Pallet \\nWidth (IN)', 'Pallet \\nHeight (IN)',\n",
+       "       'Pallet \\nGross Weight (LB)', 'Pallet \\nVolume (CUB)',\n",
+       "       'Pallet\\nUnits / Layer', 'Pallet\\nLayers / Pallet '],\n",
+       "      dtype='object', name=2)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "8c5d3c09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['images']= df['Catalog Number'].map(images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "1ea2a230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9696, 55)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "20507527",
+   "id": "630d05c1",
    "metadata": {},
    "outputs": [],
    "source": []
